[package]
name = "dynamic-lru-cache"
version = "0.2.1"
authors = ["Scott Teal"]
readme = "README.md"
edition = "2021"
categories = [ "caching" ]
keywords = ["caching", "cache", "lru"]
repository = "https://github.com/Cognoscan/dynamic-lru-cache"
documentation = "http://docs.rs/dynamic-lru-cache"
license = "MIT OR Apache-2.0"
description = "LRU Cache that only stores items recently seen more than once."

[dev-dependencies]
rand = "0.7"
